# clingo-python

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conftest.py  manage.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: auto-merge-dependency-upgrade.yml  log_secrets.yml  pre-commit-autoupdate.yml
clingo/: asgi.py  env.py  settings.py  urls.py  wsgi.py
clingo/core/: languages.py
clingo/material/: models.py
clingo/material/migrations/: 0001_initial.py
clingo/social_media/: models.py
clingo/social_media/migrations/: 0001_initial.py
clingo/social_media/providers/: __init__.py  base.py  xhs.py
clingo/social_media/tests/: test_models.py
clingo/tests/: fixtures.py  runner.py
