[tool.poetry]
name = "clingo"
version = "0.1.0"
description = "Learn languages by watching video clips"
authors = ["Ace"]
license = "MIT"
readme = "README.md"
packages = [{include = "clingo"}]

[tool.poetry.dependencies]
python = "^3.11"
youtube-dl = {git = "https://github.com/ytdl-org/ytdl-nightly.git", rev = "2024.02.03"}
playwright = "^1.55.0"
moviepy = {git = "https://github.com/Zulko/moviepy.git"}
vtt-to-srt3 = "^0.2.0.4"
pydeeplx = "^1.0.7"
django = "^5.2"
django-environ = "^0.12.0"
psycopg2-binary = "^2.9.10"



[tool.poetry.group.dev.dependencies]
pytest-playwright = "^0.7.0"
pre-commit = "^4.3.0"
ruff = "^0.13.0"
mypy = "^1.17.0"
django-stubs = "^5.2.2"
django-stubs-ext = "^5.1.3"
pytest-cov = "^6.3.0"
pytest-django = "^4.11.1"
pytest-django-queries = "^1.2.0"
pytest-factoryboy = "^2.8.1"
pytest-html = "^4.1.1"
pytest-mock = "^3.15.0"

[tool.ruff]
lint.extend-select = ["D", "I", "ISC002", "PIE", "PT", "T20", "UP"]
lint.ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D202", "D203", "D206", "D213", "D407", "PT019"]
target-version = "py311"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
known-first-party = ["clingo"]

[tool.mypy]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "clingo.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "clingo.settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
